force-app/main/default/objects/Survey_Question__c/fields/Choices__c.field-meta.xml
<CustomField>
    <fullName>Choices__c</fullName>
    <inlineHelpText>Possible answers to the question</inlineHelpText>
    <label>Choices</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>