force-app/main/default/objects/Survey_Question__c/fields/Hide_on_Survey__c.field-meta.xml
<CustomField>
    <fullName>Hide_on_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to hide this question on a survey. Useful if you want to replace a single question without losing old question data</inlineHelpText>
    <label>Hide on Survey</label>
    <type>Checkbox</type>
</CustomField>