force-app/main/default/objects/Survey_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>This is the main question. Future feature: Subtitle in smaller print</description>
    <inlineHelpText>The question you would like answered</inlineHelpText>
    <label>Question Title</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>