force-app/main/default/objects/Survey_Question__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the question required? Check this box if you want the taker to be required to answer the question.</description>
    <inlineHelpText>Is an answer to the question required? (default is true)</inlineHelpText>
    <label>Required Question</label>
    <type>Checkbox</type>
</CustomField>