force-app/main/default/objects/Survey_Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Select--Vertical</fullName>
                <default>true</default>
                <label>Single Select--Vertical</label>
            </value>
            <value>
                <fullName>Single Select--Horizontal</fullName>
            </value>
            <value>
                <fullName>Multi-Select--Vertical</fullName>
            </value>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Free Text - Single Row Visible</fullName>
            </value>
            <value>
                <fullName>--SELECT--</fullName>
                <isActive>false</isActive>
                <label>--SELECT--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>